--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "googleapis": "^114.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
